fix article summary overflow

--- a/front/src/assets/common/Article.scss
+++ b/front/src/assets/common/Article.scss
@@ -55,7 +55,7 @@
     .description {
       word-break: break-word;
       overflow-wrap: break-word;
-      font-size: 1rem;
+      font-size: 0.9rem;
       line-height: 1.5;
       height: 3.9375rem;
       display: -webkit-box;
